syntax = "proto3";

option java_package = "com.betpawa.hiring";


message CreateWalletUserRequest {
  string userId = 1;
  string currency = 2;
}

message CreateWalletUserResponse {
  string result = 1;
}


service CreateWalletUserService {
  rpc create(CreateWalletUserRequest) returns (CreateWalletUserResponse) {}
}